@@ -1,5 +1,5 @@
 /*
- * Copyright 2004-2014 H2 Group. Multiple-Licensed under the MPL 2.0,
+ * Copyright 2004-2018 H2 Group. Multiple-Licensed under the MPL 2.0,
  * and the EPL 1.0 (http://h2database.com/html/license.html).
  * Initial Developer: H2 Group
  */
@@ -41,7 +41,7 @@ public abstract class FilePathWrapper extends FilePath {
 
     private FilePathWrapper create(String path, FilePath base) {
         try {
-            FilePathWrapper p = getClass().newInstance();
+            FilePathWrapper p = getClass().getDeclaredConstructor().newInstance();
             p.name = path;
             p.base = base;
             return p;
